--- a/rephrasely_desktop/pubspec.yaml
+++ b/rephrasely_desktop/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   # State Management
   provider: ^6.1.2
   
+  # Date and time formatting
+  intl: ^0.19.0
+  
   # Icons
   lucide_icons_flutter: ^1.3.0
   
