--- a/rephrasely_desktop/pubspec.yaml
+++ b/rephrasely_desktop/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   
   # Markdown Support
   flutter_markdown: ^0.7.4+1
+  
+  # URL Launcher
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
