--- a/rephrasely_desktop/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+++ b/rephrasely_desktop/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
@@ -61,6 +61,13 @@
       debugServiceExtension = "internal"
       enableGPUValidationMode = "1"
       allowLocationSimulation = "YES">
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IDEPreferLogStreaming"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
